src/sage/geometry/polyhedron/combinatorial_polyhedron/hasse_diagram.pxd

cdef extern from "hasse_diagram.h":
    ctypedef void* CombinatorialPolyhedron_ptr;
    cdef CombinatorialPolyhedron_ptr init_CombinatorialPolyhedron(tuple py_tuple, unsigned int nr_vertices, int is_unbounded, unsigned int nr_lines)
    cdef CombinatorialPolyhedron_ptr init_CombinatorialPolyhedron(tuple py_tuple, int is_unbounded, unsigned int nr_lines)
    cdef unsigned int dimension(CombinatorialPolyhedron_ptr C)
    cdef void f_vector(CombinatorialPolyhedron_ptr C, unsigned long *vector)
    cdef unsigned int ** edges(CombinatorialPolyhedron_ptr C)
    cdef unsigned int ** ridges(CombinatorialPolyhedron_ptr C)
    cdef unsigned long ** incidences(CombinatorialPolyhedron_ptr C, int dimension_one, int dimension_two, unsigned long * nr_incidences, unsigned int * twisted)
    cdef void record_all_faces(CombinatorialPolyhedron_ptr C)
    cdef unsigned long get_faces(CombinatorialPolyhedron_ptr C, int dimension, unsigned int facet_repr, unsigned int **faces_to_return, unsigned int *length_of_faces)
    cdef unsigned long  get_flag(CombinatorialPolyhedron_ptr C, unsigned int *flagarray, unsigned int length)
    cdef void delete_CombinatorialPolyhedron(CombinatorialPolyhedron_ptr)
    cdef unsigned long get_maxnumberedges()
    cdef unsigned long get_maxnumberincidences()
